--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,7 @@ reCaptcha:
   siteKey                :
   secret                 :
 atom_feed:
+future: true
   path                   : # blank (default) uses feed.xml
 search                   : # true, false (default)
 search_full_content      : # true, false (default)
